--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
+<!--
+  ~ Copyright (c) 2018.
+  ~ Sergey Suzanskyi
+  -->
+
 <resources>
     <string name="app_name">Publicator</string>
     <string name="action_settings">Settings</string>
@@ -78,10 +83,9 @@
     <string name="title_activity_tabed">tabed</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="title_activity_search_settings">search_settings</string>
-    <string name="title_activity_start">Start</string>
+    <string name="title_activity_start">Publicator</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_title">Android Studio</string>
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
 </resources>
